# medgroundAI

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  EXAMPLES.md  HOWTOUSE.md  LICENSE  README.md  SAFETY.md  SECURITY.md  install-skills.sh  install.sh  pyproject.toml
deploy/: com.medground.serve.plist
skills/: README.md
skills/doc/: SKILL.md
skills/doc-biomarker-match/: SKILL.md
skills/doc-case/: SKILL.md
skills/doc-contradictions/: SKILL.md
skills/doc-evidence/: SKILL.md
skills/doc-find-concept/: SKILL.md
skills/doc-find-paper/: SKILL.md
skills/doc-gems/: SKILL.md
skills/doc-grounding-check/: SKILL.md
skills/doc-help/: SKILL.md
skills/doc-landscape/: SKILL.md
skills/doc-paper-appraisal/: SKILL.md
skills/doc-synthesis/: SKILL.md
skills/doc-treatment-map/: SKILL.md
skills/doc-triage/: SKILL.md
skills/doc-watch/: SKILL.md
src/medground/: __init__.py  cli.py  config.py  models.py  runtime.py
src/medground/ingest/: __init__.py  chunker.py  pipeline.py
src/medground/mcp/: __init__.py  server.py
src/medground/nlp/: __init__.py  embeddings.py
src/medground/retrieve/: __init__.py  grounding.py  hybrid.py
src/medground/sources/: __init__.py  civic.py  pubmed.py
src/medground/store/: __init__.py  docs.py  graph.py  lexical.py  vectors.py
src/medground/watch/: __init__.py  service.py
tests/: test_civic.py  test_docs.py  test_grounding.py  test_owner_lock.py  test_runtime.py  test_wal_recovery.py
