[project]
name = "medground"
version = "0.0.1"
description = "Grounded Graph-RAG over cancer research literature."
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.7",
    "duckdb>=1.1",
    "kuzu>=0.6",
    "pyarrow>=17",
    "fastembed>=0.3",
    "openai>=1.40",
    "voyageai>=0.2",
    "typer>=0.12",
    "rich>=13",
    "mcp>=1.2",
    "anyio>=4",
    "tenacity>=9",
    "python-dateutil>=2.9",
    "lxml>=5",
    "truststore>=0.10",
    "python-dotenv>=1.0",
]

[project.scripts]
medground = "medground.cli:app"
medground-mcp = "medground.mcp.server:main"

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.hatch.build.targets.wheel]
packages = ["src/medground"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "RUF"]
ignore = ["E501"]
